<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">rasp-home</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Reboot</string>
    <string name="title_section3">Shutdown</string>
    <string name="action_settings">Settings</string>
    <string name="ip_address">192.168.0.111</string>
    <string name="save_button">save_button</string>
    <string name="plug1">plug1</string>
    <string name="plug2">plug2</string>
    <string name="plug3">plug3</string>
    <string name="refresh">refresh</string>
    <string name="offline">offline</string>
    <string name="online">online</string>
    <string name="restart">restart</string>
    <string name="d1">A1</string>
    <string name="d2">B2</string>
    <string name="d3">plug3</string>
    <string name="log1">Reboot</string>
    <string name="log2">Shutdown</string>
    <string name="IPaddress">IP address</string>

</resources>
