<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5DA81"
    android:contentDescription="@string/offline"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rasp_home.HomeFragment" >

    <EditText
        android:id="@+id/ipaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/ip_address"
        android:inputType="text|number" />

    <ImageButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ipaddress"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/ipaddress"
        android:background="@drawable/pfeil"
        android:contentDescription="@string/save_button"
        android:src="@drawable/pfeil" />

    <ImageButton
        android:id="@+id/plug3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/plug2"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/plug2"
        android:background="@drawable/stecker"
        android:contentDescription="@string/plug3"
        android:src="@drawable/stecker" />

    <ImageButton
        android:id="@+id/plug1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/plug2"
        android:layout_marginRight="30dp"
        android:layout_toLeftOf="@+id/plug2"
        android:background="@null"
        android:contentDescription="@string/plug1"
        android:src="@drawable/lampe2" />

    <ImageButton
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
        android:background="@drawable/shutdown"
        android:contentDescription="@string/restart"
        android:src="@drawable/shutdown" />

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/status"
        android:layout_toRightOf="@+id/status"
        android:background="@drawable/refresh"
        android:contentDescription="@string/refresh"
        android:src="@drawable/refresh" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ipaddress"
        android:layout_below="@+id/ipaddress"
        android:text="@string/IPaddress" />

    <ImageButton
        android:id="@+id/plug2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:contentDescription="@string/plug2"
        android:src="@drawable/fan2" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restart"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:hint="@string/offline"
        android:text="@string/offline"
        android:textSize="20sp" />

</RelativeLayout>
